--- a/index.html
+++ b/index.html
@@ -200,15 +200,15 @@
 <p><br></p>
 
 
-    <ul>7월(업로드 예정 , 1일만 링크 작동)  - <a href="https://cafe.naver.com/steamindiegame/7091782">月刊 ゔぃちゃん 7月号</a>
+    <ul>7월(업로드 예정 , 8일까지 링크 작동)  - <a href="https://cafe.naver.com/steamindiegame/7091782">月刊 ゔぃちゃん 7月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/6726177">01일</a> - <a href="">4시반) 멜론36위 가수의 레디언트 36위 선생님께 발로란트 배우기 (발로란트 배우기 , Vii틀즈 서류면접 , 뱅종노래뱅? , Butter후기로 비비기  , 찐뱅종곡 - 낭만고라니)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6755565">03일 1부</a> , <a href="https://cafe.naver.com/steamindiegame/6763737">2부</a>
-         - <a href="">7시) 비틀즈 면접</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href="">5시) 마크 공포맵!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href="">5시) 마크 공포맵!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6782920">06일</a> - <a href="">정상영업 합니다</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6797061">07일</a> - <a href="">8시) 발로란트 합방~!!!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6807681">08일</a> - <a href="">불금 드가자~~~~</a></ul>
+         - <a href="https://youtu.be/Scnqz9yTNPA">7시) 비틀즈 면접 (전못진 비하인드,가이드 , vii틀즈 면접 , 베란다 챠니네 , 전투력 측정기 리와인드 , 빌보두 , 차(tea)가리)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href="https://youtu.be/AqHNMaK1Ewk">5시) 마크 공포맵! (물쏟았다!)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href="https://youtu.be/UAGCKXgsyg0">5시) 마크 공포맵! (송출컴 어쩌지 , AS알아볼게요)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6782920">06일</a> - <a href="https://youtu.be/T5INJqKiV0I">정상영업 합니다 (송출컴 이야기 , 수리썰 , 녹음썰 , Unpacking , 발로란트)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6797061">07일</a> - <a href="https://youtu.be/Hx7iKzW9jlo">8시) 발로란트 합방~!!! (발로란트 내전 , 먹가리 , 2팀 개꿀잼 디코 모음)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6807681">08일</a> - <a href="https://youtu.be/ygQJRHQAhHo">불금 드가자~~~~ (애니 캐릭터 월드컵 1024강 , 뱅종곡 - 슈가송과 비터스텝)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6818818">09일</a> - <a href="">비챤등장~!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6834151">10일</a> - <a href="">MBTI 재검사</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="">우와 일은 정말 즐거워~!</a></ul>
