--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div>2021년</div>
       <ul>8월
         <ul>26일 - <a href="https://youtu.be/XQXg0ktkRRo">비챤 이세돌 합격</a></ul>
-        <ul>28일 - <a href="https://youtu.be/nG-nVBf9ch0">드가자 (이세돌 아바타 점검 , 고멤 1기 생존자 발표)</a></ul>
+        <ul>28일 - </a href="https://youtu.be/nG-nVBf9ch0">(업로드 오류 22일 자정 재업로드 예정)드가자 (이세돌 아바타 점검 , 고멤 1기 생존자 발표)</a></ul>
       </ul>
       <p>　</p>
       
