--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 
      <ul>6월 - <a href="https://cafe.naver.com/steamindiegame/6761779">月刊 ゔぃちゃん 6月号</a>
         <ul><a href="https://cafe.naver.com/steamindiegame/6307504">01일</a> - <a href="https://youtu.be/LTGfBTQq2kA">해피 수요일!!!!!!!!!!!!! (우타이테월드컵 , 첫사랑 고로시 , 뱅종노래방)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6337693">03일</a> - <a href="https://youtu.be/Z5bS44xpZeI">짧뱅쓰! (이세돌 차가리)</ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6352400">04일</a> - <a href="https://youtu.be/dYCkTBjAaEg">오뱅창 (봄여름가을겨울 감상 , 여름노래 , 이세돌은 강하다 , 빌보두)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6337693">03일</a> - <a href="https://youtu.be/Z5bS44xpZeI">짧뱅쓰!● (이세돌 차가리)(저작권크리 음원교체)</ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6352400">04일</a> - <a href="https://youtu.be/dYCkTBjAaEg">오뱅창● (봄여름가을겨울 감상 , 여름노래 , 이세돌은 강하다 , 빌보두)(저작권크리 음원교체)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6383582">05일</a> - <a href="https://youtu.be/BRxugn7WEac">8시 왁타버스 고멤가요제 드래프트</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6402715">07일</a> - <a href="https://youtu.be/ILGJw-WkJ3c">5시) VRC 여행떠나기 (VRC풀트 꽃구경)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6445830">10일</a> - <a href="https://youtu.be/UuZ_r9_t8MY">10시가 되기 전 떠나는 신데렐라 (저작권크리)(해당부분제거) ●</a></ul>
@@ -207,7 +207,7 @@
          - <a href="https://youtu.be/Scnqz9yTNPA">7시) 비틀즈 면접 (전못진 비하인드,가이드 , vii틀즈 면접 , 베란다 챠니네 , 전투력 측정기 리와인드 , 빌보두 , 차(tea)가리)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href="https://youtu.be/AqHNMaK1Ewk">5시) 마크 공포맵! (물쏟았다!)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href="https://youtu.be/UAGCKXgsyg0">5시) 마크 공포맵! (송출컴 어쩌지 , AS알아볼게요)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6782920">06일</a> - <a href="https://youtu.be/T5INJqKiV0I">정상영업 합니다 (송출컴 이야기 , 수리썰 , 녹음썰 , Unpacking , 발로란트)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6782920">06일</a> - <a href="https://youtu.be/T5INJqKiV0I">정상영업 합니다● (송출컴 이야기 , 수리썰 , 녹음썰 , Unpacking , 발로란트)(주술회전 패러디op삭제 필요 영상길어서 추후수정 요망)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6797061">07일</a> - <a href="https://youtu.be/Hx7iKzW9jlo">8시) 발로란트 합방~!!! (발로란트 내전 , 먹가리 , 2팀 개꿀잼 디코 모음)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6807681">08일</a> - <a href="https://youtu.be/ygQJRHQAhHo">불금 드가자~~~~ (애니 캐릭터 월드컵 1024강 , 뱅종곡 - 슈가송과 비터스텝)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6818818">09일</a> - <a href="">비챤등장~!</a></ul>
