--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       
       <ul>9월
         <ul>05일 - <a href="https://youtu.be/fwijASOVJGs">노가리 후 마크 (이세돌 합방 다이아 서바이벌)</a></ul>
+        <ul>12일 - <a href="https://youtu.be/UdlK4UjDPyw">옷 쇼핑 + 똥겜데이<br>
+          (이세돌 합방 , 부스탐방 , SIMPLE FISH ADVENTURE , 리와인드 연습 , 악질 부검 , 끄투 , 이세돌 프로필 촬영 , 장난기기능 최초공개 , 이세돌 인터뷰)</a></ul>
       </ul>
       <p>　</p>
 
