--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/6782920">06일</a> - <a href="https://youtu.be/T5INJqKiV0I">정상영업 합니다● (송출컴 이야기 , 수리썰 , 녹음썰 , Unpacking , 발로란트)(주술회전 패러디op삭제 필요 영상길어서 추후수정 요망)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6797061">07일</a> - <a href="https://youtu.be/Hx7iKzW9jlo">8시) 발로란트 합방~!!! (발로란트 내전 , 먹가리 , 2팀 개꿀잼 디코 모음)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6807681">08일</a> - <a href="https://youtu.be/ygQJRHQAhHo">불금 드가자~~~~ (애니 캐릭터 월드컵 1024강 , 뱅종곡 - 슈가송과 비터스텝)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6818818">09일</a> - <a href="">비챤등장~!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6834151">10일</a> - <a href="">MBTI 재검사</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="">우와 일은 정말 즐거워~!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="">방가방가류</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6818818">09일</a> - <a href="https://youtu.be/2k-GpEqE91I">비챤등장~! (노래뱅 , VRC맵 탐방(맥퀸 , 범퍼카운전) , 우마무스메 , 빌보두)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6834151">10일</a> - <a href="https://youtu.be/1rsxlXt2xV8">MBTI 재검사 (애착 헤드셋 , 포케! , MBTI재검사 , 세븐나이츠 광고)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="https://youtu.be/noSCOT4jLBI">우와 일은 정말 즐거워~! (오니가 없는 사이에 MV , 아버지 차 타며 있던 썰 , 게임가리 , HADES)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="">방가방가류</a></ul> 
        <ul><a href="https://cafe.naver.com/steamindiegame/6901535">16일</a> - <a href="">[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6919234">17일</a> - <a href="">5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6947284">19일</a> - <a href="">이요오오오오오옹</a></ul>
