--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <p><br></p>
 
 
-    <ul>7월(업로드 예정 , 8일까지 링크 작동)  - <a href="https://cafe.naver.com/steamindiegame/7091782">月刊 ゔぃちゃん 7月号</a>
+    <ul>7월(업로드 예정 , 15일까지 링크 작동)  - <a href="https://cafe.naver.com/steamindiegame/7091782">月刊 ゔぃちゃん 7月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/6726177">01일</a> - <a href="">4시반) 멜론36위 가수의 레디언트 36위 선생님께 발로란트 배우기 (발로란트 배우기 , Vii틀즈 서류면접 , 뱅종노래뱅? , Butter후기로 비비기  , 찐뱅종곡 - 낭만고라니)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6755565">03일 1부</a> , <a href="https://cafe.naver.com/steamindiegame/6763737">2부</a>
          - <a href="https://youtu.be/Scnqz9yTNPA">7시) 비틀즈 면접 (전못진 비하인드,가이드 , vii틀즈 면접 , 베란다 챠니네 , 전투력 측정기 리와인드 , 빌보두 , 차(tea)가리)</a></ul>
@@ -223,7 +223,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/6818818">09일</a> - <a href="https://youtu.be/2k-GpEqE91I">비챤등장~! (노래뱅 , VRC맵 탐방(맥퀸 , 범퍼카운전) , 우마무스메 , 빌보두)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6834151">10일</a> - <a href="https://youtu.be/1rsxlXt2xV8">MBTI 재검사 (애착 헤드셋 , 포케! , MBTI재검사 , 세븐나이츠 광고)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="https://youtu.be/noSCOT4jLBI">우와 일은 정말 즐거워~! (오니가 없는 사이에 MV , 아버지 차 타며 있던 썰 , 게임가리 , HADES)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="">방가방가류</a></ul> 
+       <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="https://youtu.be/ni34S7iVu9I">방가방가류 (하트 , 아이마스+노래가리 , 스타 유즈맵 노래 맞추기)</a></ul> 
        <ul><a href="https://cafe.naver.com/steamindiegame/6901535">16일</a> - <a href="">[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6919234">17일</a> - <a href="">5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6947284">19일</a> - <a href="">이요오오오오오옹</a></ul>
