--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="https://youtu.be/noSCOT4jLBI">우와 일은 정말 즐거워~! (오니가 없는 사이에 MV , 아버지 차 타며 있던 썰 , 게임가리 , HADES)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="https://youtu.be/ni34S7iVu9I">방가방가류 (하트 , 아이마스+노래가리 , 스타 유즈맵 노래 맞추기)</a></ul> 
        <ul><a href="https://cafe.naver.com/steamindiegame/6901535">16일</a> - <a href="https://youtu.be/h0yxKApStF8">[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵 (마크 공포 탈출맵 , 우마무스메 2기 같이보기 , 빌보두)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6919234">17일</a> - <a href="https://youtu.be/NH7pzjjDgew">5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영<br>
-                                                                                                                      (VRC풀트뱅 , 고라니댄스 , 100만 - 다시 만난 세계 , 노래뱅 , 스타 여자아이돌 노래 유즈맵 , 십덕노래 유즈맵 , 노래로 보는 22년 왁타 상반기 , 섬머타임 팬영상 , 루석바에서 비챤시까지 노래뱅)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6919234">17일</a> - <a href="https://youtu.be/NH7pzjjDgew">5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영●<br>
+                                                                                                                      (VRC풀트뱅 , 고라니댄스 , 100만 - 다시 만난 세계 , 노래뱅 , 스타 여자아이돌 노래 유즈맵 , 십덕노래 유즈맵 , 노래로 보는 22년 왁타 상반기 , 섬머타임 팬영상 , 루석바에서 비챤시까지 노래뱅)(저작권 크리)(영상길이 문제로 수정불가)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6947284">19일</a> - <a href="https://youtu.be/Z2SY6MWTrWs">이요오오오오오옹 (고,챤 공지,도네 돚거 , 폴가이즈 , 음식가리 , 추억가리 , 부모님 이야기 , VR챗 시작한 계기 , 노래뱅)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6964313">20일</a> - <a href="">좋아 가자!!!!!!!!!!!!!!!!!!!!!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6978337">22일</a> - <a href="">8시) 비챤의 괴담식당</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7002557">24일</a> - <a href="">초짧뱅</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7012271">25일</a> - <a href="">우마뾰이</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6964313">20일</a> - <a href="https://youtu.be/9u65IAlIRF8">좋아 가자!!!!!!!!!!!!!!!!!!!!! (바다거북 스프 , 고라니재판(밴 해제요청) , 웹툰(이세마스 7화 , 무협만화 2화) , 오디션 회상)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6978337">22일</a> - <a href="https://youtu.be/8_8wodUsmvE">8시) 비챤의 괴담식당 (디즈니 메들리 썰 , 괴담 식당 , 먹가리,요리가리 , 드라마 OST월드컵 , 이세돌 노래 돌아보기)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7002557">24일</a> - <a href="https://youtu.be/TFf3VcfiFPI">초짧뱅 (작년 형에게 생일축하 도네한 썰 , 빌보두 , 1주년 돌아보기)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7012271">25일</a> - <a href="https://youtu.be/gZ7SgDMNJAg">우마뾰이 ( 형 생일 축하해드린 썰 , 챤랄 라디오 , 노래뱅 , 우마무스메)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7031013">26일</a> - <a href="">5시) 여름맞이 풀트뱅~!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7040520">27일</a> - <a href="">핫걸이라 그런지 너무 덥달까나~</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7086514">30일</a> - <a href="">5시) 러브비트!</a></ul>
