--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/6964313">20일</a> - <a href="https://youtu.be/9u65IAlIRF8">좋아 가자!!!!!!!!!!!!!!!!!!!!! (바다거북 스프 , 고라니재판(밴 해제요청) , 웹툰(이세마스 7화 , 무협만화 2화) , 오디션 회상)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6978337">22일</a> - <a href="https://youtu.be/8_8wodUsmvE">8시) 비챤의 괴담식당 (디즈니 메들리 썰 , 괴담 식당 , 먹가리,요리가리 , 드라마 OST월드컵 , 이세돌 노래 돌아보기)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7002557">24일</a> - <a href="https://youtu.be/TFf3VcfiFPI">초짧뱅 (작년 형에게 생일축하 도네한 썰 , 빌보두 , 1주년 돌아보기)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7012271">25일</a> - <a href="https://youtu.be/gZ7SgDMNJAg">우마뾰이 ( 형 생일 축하해드린 썰 , 챤랄 라디오 , 노래뱅 , 우마무스메)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7031013">26일</a> - <a href="">5시) 여름맞이 풀트뱅~!</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7012271">25일</a> - <a href="https://youtu.be/gZ7SgDMNJAg">우마뾰이 (형 생일 축하해드린 썰 , 챤랄 라디오 , 노래뱅 , 우마무스메)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7031013">26일</a> - <a href="https://youtu.be/5zEZHVhRvNk">5시) 여름맞이 풀트뱅~! (신규 헤어와 의상 공개 (똥머리 , 스트레이트 , 투피스  , 점퍼) , 홍머챤 , VRC풀트 , 헬렛루즈)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7040520">27일</a> - <a href="">핫걸이라 그런지 너무 덥달까나~</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7086514">30일</a> - <a href="">5시) 러브비트!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7091693">31일</a> - <a href="">5시) 싱크룸 보컬 모집쓰!</a></ul>
