--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7002557">24일</a> - <a href="https://youtu.be/TFf3VcfiFPI">초짧뱅 (작년 형에게 생일축하 도네한 썰 , 빌보두 , 1주년 돌아보기)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7012271">25일</a> - <a href="https://youtu.be/gZ7SgDMNJAg">우마뾰이 (형 생일 축하해드린 썰 , 챤랄 라디오 , 노래뱅 , 우마무스메)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7031013">26일</a> - <a href="https://youtu.be/5zEZHVhRvNk">5시) 여름맞이 풀트뱅~! (신규 헤어와 의상 공개 (똥머리 , 스트레이트 , 투피스  , 점퍼) , 홍머챤 , VRC풀트 , 헬렛루즈)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7040520">27일</a> - <a href="">핫걸이라 그런지 너무 덥달까나~</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7086514">30일</a> - <a href="">5시) 러브비트!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7091693">31일</a> - <a href="">5시) 싱크룸 보컬 모집쓰!</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7040520">27일</a> - <a href="https://youtu.be/pfPs7U1ojq0">핫걸이라 그런지 너무 덥달까나~ (VRC사진 구경 , 발로란트 , 오목)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7086514">30일</a> - <a href="https://youtu.be/UH5XkrKpg_k">5시) 러브비트! (가족 이야기 , 데이브레이크 아카펠라 공개 , 러브비트 광고 , 파이널 로맨스 감상 , 릴파MMD 사계 , 비챤MMD 롤링걸 , 이세돌 회의썰 , 망냥냥 패션 모음 , 어렸을때 썰 , 챤냥이)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7091693">31일</a> - <a href="https://youtu.be/VhMNzPHp5GM">5시) 싱크룸 보컬 모집쓰! (싱크룸 보컬 모집 면접 , 합격자 모임 , 릴스 언니야 , 술과 안주썰 , 비오니 노래뱅)</a></ul>
 
     </ul>
 </span>
