--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
           　 해당 영상의 댓글로 남겨주시면 체크하겠습니다<br>
           　 다만 진행중에 뜬금없는 노래가 나오는건 저작권 회피용이니 그러려니 넘어가시면 됩니다</ul>
       
-      <ul>※ 2022년 10월 18일자 기준 가지고 있는 6월달 분까지 업로드 완료<br>
-           　 7 , 8월 분은 업로드를 잠시 보류하고 제공받은 영상들로<br>
-          　 비어있는 칸 채우는걸 먼저 진행하겠습니다<br>
+      <ul>※ 2022년 10월 25일자 기준 가지고 있는 22년 영상 중 7월달 분까지 업로드 완료<br>
+           　21년 영상은 검수 후 올려야해서 좀 걸릴 예정입니다<br>
           　 영상 제공 해주신분들 감사합니다</ul>
       
       <ul>※ 1일 업로드 제한으로 인해 하루에 약 10개 내외의 영상만이 업데이트 됩니다</ul>
@@ -219,7 +218,7 @@
 <p><br></p>
 
 
-    <ul>7월(업로드 예정 , 19일까지 링크 작동)  - <a href="https://cafe.naver.com/steamindiegame/7091782">月刊 ゔぃちゃん 7月号</a>
+    <ul>7월 - <a href="https://cafe.naver.com/steamindiegame/7091782">月刊 ゔぃちゃん 7月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/6726177">01일</a> - <a href="">4시반) 멜론36위 가수의 레디언트 36위 선생님께 발로란트 배우기 (발로란트 배우기 , Vii틀즈 서류면접 , 뱅종노래뱅? , Butter후기로 비비기  , 찐뱅종곡 - 낭만고라니)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6755565">03일 1부</a> , <a href="https://cafe.naver.com/steamindiegame/6763737">2부</a>
          - <a href="https://youtu.be/Scnqz9yTNPA">7시) 비틀즈 면접 (전못진 비하인드,가이드 , vii틀즈 면접 , 베란다 챠니네 , 전투력 측정기 리와인드 , 빌보두 , 차(tea)가리)</a></ul>
