--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/5004934">06일</a> - 짧뱅쓰</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5030465">08일</a> - 안녕하세용!!!!!!!</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5044924">09일</a> - <a href="https://youtu.be/0vSXEgZ78Zg">6시 취기를빌려 최초공개</a> </ul>   
-          <ul><a href="https://cafe.naver.com/steamindiegame/5062791">10일</a> - 감사합니다!!!!</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5062791">10일</a> - <a href="https://youtu.be/tHLdZ0QGhDY">감사합니다!!!! (취기를 빌려 비하인드 , 쇼케이스 풀트준비 , 신의상 잠옷  , 겨울봄 쇼케이스)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5078795">11일</a> - 6시) 겨울봄 공개 !</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5105682">12일</a> - 겨울봄같은 날씨..^^*</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5129952">13일</a> - <a href="https://youtu.be/tPq9jZtHQZo">5시 일식밴드 덕틀즈 (덕틀즈 , 사이언티스트 티저)</a></ul>
@@ -241,7 +241,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7012271">25일</a> - <a href="https://youtu.be/gZ7SgDMNJAg">우마뾰이 (형 생일 축하해드린 썰 , 챤랄 라디오 , 노래뱅 , 우마무스메)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7031013">26일</a> - <a href="https://youtu.be/5zEZHVhRvNk">5시) 여름맞이 풀트뱅~! (신규 헤어와 의상 공개 (똥머리 , 스트레이트 , 투피스  , 점퍼) , 홍머챤 , VRC풀트 , 헬렛루즈)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7040520">27일</a> - <a href="https://youtu.be/pfPs7U1ojq0">핫걸이라 그런지 너무 덥달까나~ (VRC사진 구경 , 발로란트 , 오목)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7086514">30일</a> - <a href="https://youtu.be/qU96t4XvzmU">5시) 러브비트! (가족 이야기 , 데이브레이크 아카펠라 공개 , 러브비트 광고 , 파이널 로맨스 감상 , 릴파MMD 사계 , 비챤MMD 롤링걸 , 이세돌 회의썰 , 망냥냥 패션 모음 , 어렸을때 썰 , 챤냥이)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7086514">30일</a> - <a href="https://youtu.be/JcU6FOrNKac">5시) 러브비트! (가족 이야기 , 데이브레이크 아카펠라 공개 , 러브비트 광고 , 파이널 로맨스 감상 , 릴파MMD 사계 , 비챤MMD 롤링걸 , 이세돌 회의썰 , 망냥냥 패션 모음 , 어렸을때 썰 , 챤냥이)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7091693">31일</a> - <a href="https://youtu.be/VhMNzPHp5GM">5시) 싱크룸 보컬 모집쓰! (싱크룸 보컬 모집 면접 , 합격자 모임 , 릴스 언니야 , 술과 안주썰 , 비오니 노래뱅)</a></ul>
 
     </ul>
