--- a/index.html
+++ b/index.html
@@ -249,16 +249,16 @@
        <p><br></p>
 
 
-    <ul>8월 - <a href="https://cafe.naver.com/steamindiegame/7455901">月刊 ゔぃちゃん 8月号</a>(7일 영상까지 갱신)
+    <ul>8월 - <a href="https://cafe.naver.com/steamindiegame/7455901">月刊 ゔぃちゃん 8月号</a>(7일 영상까지 갱신 , 챤뱅내 16일까지 적용)
        <ul><a href="https://cafe.naver.com/steamindiegame/7116314">02일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/gbqacXm4h">8월 하이~!★ (가족 여행 구상 , 친구들 썰 , 챤냥냥 , STRAY)(저작권 크리)(영상길이 문제로 수정불가)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7170140">05일</a> - <a href="https://youtu.be/KMPwzKVn6OU">공포겜...ㅎ (가족 여행 이야기 , 세구,챠니 상호 고로시 , 게임이야기 , IB)</a><br>
                                                                       　　 - <a href="https://youtu.be/wrqBCrMPxD0">공포겜...ㅎㅎ (IB , 인스타 , 일상 썰 , 궁극기 월드컵)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7173545">06일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/IAyzRpA4t">특별해질 토요일!!!!!★ (스튜디오 노가리 , 공포 영화 노가리 , Jpop월드컵 64강 찍먹 , 빌보두 , 운동썰)(저작권 크리)(영상길이 문제로 수정불가)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6771703">07일</a> - <a href="https://youtu.be/UAGCKXgsyg0">행복한 일요일입니다~!!!!!(트위치 프로필변경 , 넥와인드 , Phony X Daybreak frontline Remix(feat. Ahoy!! 우리는 비챤해적단) , 구챤,뉴챤비교 , 노래추천 , 침대 노가리 , 로아 쿠크세이튼,아브렐슈드 , 위대한 쇼맨 같이보기 , 뮤지컬+노래가리)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7213635">10일</a> - <a href="https://youtu.be/T5INJqKiV0I">비온다!!!!!!!!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6797061">13일</a> - <a href="https://youtu.be/Hx7iKzW9jlo">토요일!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!`</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6807681">14일</a> - <a href="https://youtu.be/ygQJRHQAhHo">6시) 비타토닉스</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6818818">16일</a> - <a href="https://youtu.be/2k-GpEqE91I">VRC 버츄얼마켓 탐방</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7248386">13일</a> - <a href="https://youtu.be/Hx7iKzW9jlo">토요일!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!`</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7260941">14일</a> - <a href="https://youtu.be/ygQJRHQAhHo">6시) 비타토닉스</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7290506">16일</a> - <a href="https://youtu.be/2k-GpEqE91I">VRC 버츄얼마켓 탐방</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6834151">10일</a> - <a href="https://youtu.be/1rsxlXt2xV8">MBTI 재검사 (애착 헤드셋 , 포케! , MBTI재검사 , 세븐나이츠 광고)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="https://youtu.be/noSCOT4jLBI">우와 일은 정말 즐거워~! (오니가 없는 사이에 MV , 아버지 차 타며 있던 썰 , 게임가리 , HADES)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="https://youtu.be/ni34S7iVu9I">방가방가류 (하트 , 아이마스+노래가리 , 스타 유즈맵 노래 맞추기)</a></ul> 
