--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7170140">05일</a> - <a href="https://youtu.be/KMPwzKVn6OU">공포겜...ㅎ (가족 여행 이야기 , 세구,챠니 상호 고로시 , 게임이야기 , IB)</a><br>
                                                                       　　 - <a href="https://youtu.be/wrqBCrMPxD0">공포겜...ㅎㅎ (IB , 인스타 , 일상 썰 , 궁극기 월드컵)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7173545">06일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/IAyzRpA4t">특별해질 토요일!!!!!★ (스튜디오 노가리 , 공포 영화 노가리 , Jpop월드컵 64강 찍먹 , 빌보두 , 운동썰)(저작권 크리)(영상길이 문제로 수정불가)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6771703">07일</a> - <a href="https://youtu.be/UAGCKXgsyg0">행복한 일요일입니다~!!!!!(트위치 프로필변경 , 넥와인드 , Phony X Daybreak frontline Remix(feat. Ahoy!! 우리는 비챤해적단) , 구챤,뉴챤비교 , 노래추천 , 침대 노가리 , 로아 쿠크세이튼,아브렐슈드 , 위대한 쇼맨 같이보기 , 뮤지컬+노래가리)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6771703">07일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/rXf6pltNd">행복한 일요일입니다~!!!!!(트위치 프로필변경 , 넥와인드 , Phony X Daybreak frontline Remix(feat. Ahoy!! 우리는 비챤해적단) , 구챤,뉴챤비교 , 노래추천 , 침대 노가리 , 로아 쿠크세이튼,아브렐슈드 , 위대한 쇼맨 같이보기 , 뮤지컬+노래가리)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7213635">10일</a> - <a href="https://youtu.be/T5INJqKiV0I">비온다!!!!!!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7248386">13일</a> - <a href="https://youtu.be/Hx7iKzW9jlo">토요일!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!`</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7260941">14일</a> - <a href="https://youtu.be/ygQJRHQAhHo">6시) 비타토닉스</a></ul>
