--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="https://youtu.be/noSCOT4jLBI">우와 일은 정말 즐거워~! (오니가 없는 사이에 MV , 아버지 차 타며 있던 썰 , 게임가리 , HADES)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/SrPlYHsw5">방가방가류★ (하트 , 아이마스+노래가리 , 스타 유즈맵 노래 맞추기)(저작권크리)(길이때문에 수정불가 편집요망)</a></ul> 
        <ul><a href="https://cafe.naver.com/steamindiegame/6901535">16일</a> - <a href="https://youtu.be/h0yxKApStF8">[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵 (마크 공포 탈출맵 , 우마무스메 2기 같이보기 , 빌보두)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6919234">17일</a> - <a href="https://youtu.be/NH7pzjjDgew">5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영●<br>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6919234">17일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/4RPK6NFbF">5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영★<br>
                                                                                                                       (VRC풀트뱅 , 고라니댄스 , 100만 - 다시 만난 세계 , 노래뱅 , 스타 여자아이돌 노래 유즈맵 , 십덕노래 유즈맵 , 노래로 보는 22년 왁타 상반기 , 섬머타임 팬영상 , 루석바에서 비챤시까지 노래뱅)(저작권 크리)(영상길이 문제로 수정불가)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6947284">19일</a> - <a href="https://youtu.be/Z2SY6MWTrWs">이요오오오오오옹 (고,챤 공지,도네 돚거 , 폴가이즈 , 음식가리 , 추억가리 , 부모님 이야기 , VR챗 시작한 계기 , 노래뱅)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6964313">20일</a> - <a href="https://youtu.be/9u65IAlIRF8">좋아 가자!!!!!!!!!!!!!!!!!!!!! (바다거북 스프 , 고라니재판(밴 해제요청) , 웹툰(이세마스 7화 , 무협만화 2화) , 오디션 회상)</a></ul>
