--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       
       <ul>10월
         <ul>02일 - <a href="https://youtu.be/JI1JR500I3g">잔잔 바리바리 (뢴트 소집해제 , 마크 , 이세돌 어몽어스 합방)</a></ul>
-        <ul>05일 - <a href="https://youtu.be/j6SMxF_7IaM">좋화좋은 화요일이라는 뜻 (노래뱅(튤립있다!) , 팬게임 , VRC탸니)</a></ul>
+        <ul>05일 - <a href="https://youtu.be/j6SMxF_7IaM">좋화좋은 화요일이라는 뜻▲ (노래뱅(튤립있다!) , 팬게임 , VRC탸니) (4:54:00~3:00:00까지 뮤트 , 영상 있으신분 제공해주시면 감사합니다)</a></ul>
         <ul>31일 - <a href="https://youtu.be/z479KgGwAgM">할로윈 기념 왕게임데이 (파스모포비아,데바데)</a></ul></ul>
       </ul>
       <p>　</p>
