--- a/index.html
+++ b/index.html
@@ -249,32 +249,28 @@
        <p><br></p>
 
 
-    <ul>8월 - <a href="https://cafe.naver.com/steamindiegame/7455901">月刊 ゔぃちゃん 8月号</a>(7일 영상까지 갱신 , 챤뱅내 16일까지 적용)
+    <ul>8월 - <a href="https://cafe.naver.com/steamindiegame/7455901">月刊 ゔぃちゃん 8月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/7116314">02일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/gbqacXm4h">8월 하이~!★ (가족 여행 구상 , 친구들 썰 , 챤냥냥 , STRAY)(저작권 크리)(영상길이 문제로 수정불가)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7170140">05일</a> - <a href="https://youtu.be/KMPwzKVn6OU">공포겜...ㅎ (가족 여행 이야기 , 세구,챠니 상호 고로시 , 게임이야기 , IB)</a><br>
                                                                       　　 - <a href="https://youtu.be/wrqBCrMPxD0">공포겜...ㅎㅎ (IB , 인스타 , 일상 썰 , 궁극기 월드컵)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7173545">06일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/IAyzRpA4t">특별해질 토요일!!!!!★ (스튜디오 노가리 , 공포 영화 노가리 , Jpop월드컵 64강 찍먹 , 빌보두 , 운동썰)(저작권 크리)(영상길이 문제로 수정불가)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6771703">07일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/rXf6pltNd">행복한 일요일입니다~!!!!!(트위치 프로필변경 , 넥와인드 , Phony X Daybreak frontline Remix(feat. Ahoy!! 우리는 비챤해적단) , 구챤,뉴챤비교 , 노래추천 , 침대 노가리 , 로아 쿠크세이튼,아브렐슈드 , 위대한 쇼맨 같이보기 , 뮤지컬+노래가리)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7213635">10일</a> - <a href="https://youtu.be/T5INJqKiV0I">비온다!!!!!!!!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7248386">13일</a> - <a href="https://youtu.be/Hx7iKzW9jlo">토요일!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!`</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7260941">14일</a> - <a href="https://youtu.be/ygQJRHQAhHo">6시) 비타토닉스</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7290506">16일</a> - <a href="https://youtu.be/2k-GpEqE91I">VRC 버츄얼마켓 탐방</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7213635">10일</a> - <a href="https://youtu.be/0GHwsNDsXT4">비온다!!!!!!!! (스튜디오 누수썰 , 팬무비 Rumor , VRC회식,노래방 , 2차 MMD월드 , 언니야 릴스 탐방)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7248386">13일</a> - <a href="https://youtu.be/HvsK5H9V51o">토요일!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!` (데숙챤 , 요리가리 , 빌보두 , 챤냥냥 , 날씨와 태몽 , 하루일과)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7260941">14일</a> - <a href="https://youtu.be/zfDbSN29Mz8">6시) 비타토닉스 (이세돌 1년전 오늘 , 태그 커스텀 , 비타토닉스 , 팬게임 - 망냥냥의 탈출 , 노래가리)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7290506">16일</a> - <a href="https://youtu.be/8GaD924BMCI">VRC 버츄얼마켓 탐방</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6834151">10일</a> - <a href="https://youtu.be/1rsxlXt2xV8">MBTI 재검사 (애착 헤드셋 , 포케! , MBTI재검사 , 세븐나이츠 광고)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="https://youtu.be/noSCOT4jLBI">우와 일은 정말 즐거워~! (오니가 없는 사이에 MV , 아버지 차 타며 있던 썰 , 게임가리 , HADES)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="https://youtu.be/ni34S7iVu9I">방가방가류 (하트 , 아이마스+노래가리 , 스타 유즈맵 노래 맞추기)</a></ul> 
        <ul><a href="https://cafe.naver.com/steamindiegame/6901535">16일</a> - <a href="https://youtu.be/h0yxKApStF8">[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵 (마크 공포 탈출맵 , 우마무스메 2기 같이보기 , 빌보두)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6919234">17일</a> - <a href="https://youtu.be/NH7pzjjDgew">5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영●<br>
-                                                                                                                      (VRC풀트뱅 , 고라니댄스 , 100만 - 다시 만난 세계 , 노래뱅 , 스타 여자아이돌 노래 유즈맵 , 십덕노래 유즈맵 , 노래로 보는 22년 왁타 상반기 , 섬머타임 팬영상 , 루석바에서 비챤시까지 노래뱅)(저작권 크리)(영상길이 문제로 수정불가)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6947284">19일</a> - <a href="https://youtu.be/Z2SY6MWTrWs">이요오오오오오옹 (고,챤 공지,도네 돚거 , 폴가이즈 , 음식가리 , 추억가리 , 부모님 이야기 , VR챗 시작한 계기 , 노래뱅)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6964313">20일</a> - <a href="https://youtu.be/9u65IAlIRF8">좋아 가자!!!!!!!!!!!!!!!!!!!!! (바다거북 스프 , 고라니재판(밴 해제요청) , 웹툰(이세마스 7화 , 무협만화 2화) , 오디션 회상)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6978337">22일</a> - <a href="https://youtu.be/8_8wodUsmvE">8시) 비챤의 괴담식당 (디즈니 메들리 썰 , 괴담 식당 , 먹가리,요리가리 , 드라마 OST월드컵 , 이세돌 노래 돌아보기)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7002557">24일</a> - <a href="https://youtu.be/TFf3VcfiFPI">초짧뱅 (작년 형에게 생일축하 도네한 썰 , 빌보두 , 1주년 돌아보기)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7012271">25일</a> - <a href="https://youtu.be/gZ7SgDMNJAg">우마뾰이 (형 생일 축하해드린 썰 , 챤랄 라디오 , 노래뱅 , 우마무스메)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7031013">26일</a> - <a href="https://youtu.be/5zEZHVhRvNk">5시) 여름맞이 풀트뱅~! (신규 헤어와 의상 공개 (똥머리 , 스트레이트 , 투피스  , 점퍼) , 홍머챤 , VRC풀트 , 헬렛루즈)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7040520">27일</a> - <a href="https://youtu.be/pfPs7U1ojq0">핫걸이라 그런지 너무 덥달까나~ (VRC사진 구경 , 발로란트 , 오목)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7086514">30일</a> - <a href="https://youtu.be/JcU6FOrNKac">5시) 러브비트! (가족 이야기 , 데이브레이크 아카펠라 공개 , 러브비트 광고 , 파이널 로맨스 감상 , 릴파MMD 사계 , 비챤MMD 롤링걸 , 이세돌 회의썰 , 망냥냥 패션 모음 , 어렸을때 썰 , 챤냥이)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7091693">31일</a> - <a href="https://youtu.be/VhMNzPHp5GM">5시) 싱크룸 보컬 모집쓰! (싱크룸 보컬 모집 면접 , 합격자 모임 , 릴스 언니야 , 술과 안주썰 , 비오니 노래뱅)</a></ul>
-
+       <ul><a href="https://cafe.naver.com/steamindiegame/7319504">19일</a> - <a href="https://youtu.be/9DAeyAv3PEc">안녕하세요 불금뿌셔!!!!!!!!!!<br>
+                                                                                                                      (구매 자랑 , 스튜디오 시공 썰 , V-log관련 , 발컨 도입 , 세포키우기 , 주폭소년단 - 파라다이스 , 이세돌 1주년 기념 - 소녀와 마법의 공간MV , 핫쇼츠 챌린지 , You리믹스 ,비챤 노래 볶음밥 Ver.2 , 1탄 재감상 , 이세돌 사망 월드컵 , Cult of the Lamb)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7331457">20일</a> - <a href="https://youtu.be/A46alrH0_GM">해피 주말! (일식 노래 추천 , 마크 공주를 지켜라 , 빌보두 , 일정짜기 , 노래뱅 , 노래 깨부썰 , 왼쪽 무릎이 약하다)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7347869">21일</a> - <a href="https://youtu.be/YwGNWvWl0D4">6시 도전! 라니벨 (가이드 보컬 썰 , 노래뱅  , 도전 라니벨)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7366130">23일</a> - <a href="https://youtu.be/ziitHs7XmyI">6시 편집자님들이랑 백룸 공포게임진짜무서움주의 (우마뾰이 같이보기 , Inside the Backroom , 팬덤전쟁 면접 및 선정)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7397451">26일</a> - <a href="https://youtu.be/Gf0gOlyj8us">이세계아이돌 1주년!💚 (이세계 아이돌 결성 1주년 , MMD 까꿍 - 블베볶 , 커버곡들 이야기 , 이세뾰이 녹음본 , 노래뱅)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7423351">28일</a> - <a href="https://youtu.be/j4A-UsVxVLk">5시 반 비틀즈 (스튜디오 이사 , 컴퓨터 수리 , 러브다이브 썰 , 버터 유출 썰 , VII틀즈 , 풍선 비하인드 , 야자타임 , 빌보두 , 노래뱅)</a></ul>
+     
     </ul>
 </span>
     </ul>
