--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
           　 해당 영상의 댓글로 남겨주시면 체크하겠습니다<br>
           　 다만 진행중에 뜬금없는 노래가 나오는건 저작권 회피용이니 그러려니 넘어가시면 됩니다</ul>
       
-      <ul>※ 2022년 10월 25일자 기준 가지고 있는 22년 영상 중 7월달 분까지 업로드 완료<br>
+      <ul>※ 2022년 10월 28일자 기준 가지고 있는 22년 영상 중 8월달 분까지 업로드 완료<br>
+           　다시보기가 내려가는 2달을 기준으로 업로드 할 예정이라 9월 업로드는 좀 걸릴겁니다<br>
            　21년 영상은 검수 후 올려야해서 좀 걸릴 예정입니다<br>
           　 영상 제공 해주신분들 감사합니다</ul>
       
