--- a/index.html
+++ b/index.html
@@ -260,11 +260,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7248386">13일</a> - <a href="https://youtu.be/HvsK5H9V51o">토요일!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!` (데숙챤 , 요리가리 , 빌보두 , 챤냥냥 , 날씨와 태몽 , 하루일과)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7260941">14일</a> - <a href="https://youtu.be/zfDbSN29Mz8">6시) 비타토닉스 (이세돌 1년전 오늘 , 태그 커스텀 , 비타토닉스 , 팬게임 - 망냥냥의 탈출 , 노래가리)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7290506">16일</a> - <a href="https://youtu.be/8GaD924BMCI">VRC 버츄얼마켓 탐방</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6834151">10일</a> - <a href="https://youtu.be/1rsxlXt2xV8">MBTI 재검사 (애착 헤드셋 , 포케! , MBTI재검사 , 세븐나이츠 광고)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="https://youtu.be/noSCOT4jLBI">우와 일은 정말 즐거워~! (오니가 없는 사이에 MV , 아버지 차 타며 있던 썰 , 게임가리 , HADES)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="https://youtu.be/ni34S7iVu9I">방가방가류 (하트 , 아이마스+노래가리 , 스타 유즈맵 노래 맞추기)</a></ul> 
-       <ul><a href="https://cafe.naver.com/steamindiegame/6901535">16일</a> - <a href="https://youtu.be/h0yxKApStF8">[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵 (마크 공포 탈출맵 , 우마무스메 2기 같이보기 , 빌보두)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7319504">19일</a> - <a href="https://youtu.be/9DAeyAv3PEc">안녕하세요 불금뿌셔!!!!!!!!!!<br>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7319504">19일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/ImodB4GVJ">안녕하세요 불금뿌셔!!!!!!!!!!★<br>
                                                                                                                       (구매 자랑 , 스튜디오 시공 썰 , V-log관련 , 발컨 도입 , 세포키우기 , 주폭소년단 - 파라다이스 , 이세돌 1주년 기념 - 소녀와 마법의 공간MV , 핫쇼츠 챌린지 , You리믹스 ,비챤 노래 볶음밥 Ver.2 , 1탄 재감상 , 이세돌 사망 월드컵 , Cult of the Lamb)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7331457">20일</a> - <a href="https://youtu.be/A46alrH0_GM">해피 주말! (일식 노래 추천 , 마크 공주를 지켜라 , 빌보두 , 일정짜기 , 노래뱅 , 노래 깨부썰 , 왼쪽 무릎이 약하다)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7347869">21일</a> - <a href="https://youtu.be/YwGNWvWl0D4">6시 도전! 라니벨 (가이드 보컬 썰 , 노래뱅  , 도전 라니벨)</a></ul>
