--- a/Jingburger.html
+++ b/Jingburger.html
@@ -163,11 +163,34 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/6231516">26일</a> - </a href="">무!!!!!!!!!</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6257130">28일</a> - <a href="https://youtu.be/1rHHDYLgyI8">이따 이세돌 미연시 (발로란트 , 징페이스 판타지 , 이세돌 미연시)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6273784">29일</a> - <a href="https://youtu.be/kumaMEVpKpk">천하제일투견대회~ (마크 투켠 대회 , 발로란트 , 징보이 단체 관람)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6288180">30일</a> - <a href="https://youtu.be/uRnpotoCXX8">인급동 감사합ㄴㅣ다 흑흑,,~!!! (오라버거 징보이 칭찬  ,VRChat 기네스 풀트 , 톰보이 비하인드 , 풀트 노래뱅)/ 민수데이</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6288180">30일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/QbjYJPOco">인급동 감사합ㄴㅣ다 흑흑,,~!!!★ (오라버거 징보이 칭찬  ,VRChat 기네스 풀트 , 톰보이 비하인드 , 풀트 노래뱅)/ 민수데이</a></ul>
 
         </ul>
 
+    <p>　</p>
 
+      <ul>6월
+          <ul><a href="https://cafe.naver.com/steamindiegame/6319401">02일</a> - <a href="https://youtu.be/8Uq-0R-dSuM">너뮤 늦어땨 ,, (잔잔노가리 , 귀신썰 , 헬스가리)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6333343">02일</a> - <a href="https://youtu.be/CZhS79HCqz4">근육통 레게노 (헬스가리 , 밥버거 센세 - 주르르 2편 ,</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6354121">04일</a> - </a href="">일이 너무 많아요옹 잰잰 일뱅! 🤪</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6382138">05일</a> - <a href="https://youtu.be/q_knFAmuEbY">왁타버스 고멤가요제 드래푸또 (고멤가요제 드래프트 , 마지막 재회 같이보기 , 또 나만 빼고 떡볶이)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6396990">06일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/AZbn7QiW0">비오는 월요일,,,오늘은 민수데이입니다 ^^ !민수데이★ (발로란트 , 민수데이 3회차 - 애니 오프닝 월드컵 128강) </a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6426514">08일</a> - </a href="">후후후,,,</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6446017">09일</a> - <a href="https://youtu.be/szIZ9G1GL44">3시 버거싶은 밤 잔잔 라디오 (버거싶은 밤 1화)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6453440">10일</a> - </a href="">ㅇ<-<</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6470055">11일</a> - </a href="">잰잰소통머시깽</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6501182">13일</a> - </a href="">오늘은 뭘할까나 ~.~</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6509321">14일</a> - <a href="">비가 왕창 내리는 날 </a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6525299">15일</a> - </a href="">버거싶은밤 라디오 2화</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6581737">19일</a> - <a href="https://youtu.be/N8y2j2mW7aM">끼야호 (자운버거 , 포로리 더빙 버거)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6593982">20일</a> - </a href="">헉 징버거의 상태가!!!!</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6619559">22일</a> - </a href="">으우어아악</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6670783">26일</a> - </a href="">안녕하세요 강아지님들 저는 징버거에요</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6688106">27일</a> - </a href="">워료일</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6688106">28일</a> - <a href="">새벽반 잔잔 심즈4 (발로란트 , 노래뱅 , VRChat 풀트 , 아이네 스튜디오 햄이네 , 징버거 스튜디오 , 왁숲 , 마스터피스 맵 , 기네스버거)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6722304">30일</a> - </a href="">짧뱅</a></ul>
+
+<ul><a href=""></a>  <a href=""></a></ul>
 </span>
     </ul>
       <div><img src="" alt=""></div>
