--- a/Jingburger.html
+++ b/Jingburger.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>버거 </title>
+  <title>버거 아카이브</title>
 </head>
 <body>
   <span style="line-height:160%">
