--- a/Jingburger.html
+++ b/Jingburger.html
@@ -183,7 +183,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/6509321">14일</a> - <a href="">비가 왕창 내리는 날 </a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6525299">15일</a> - </a href="">버거싶은밤 라디오 2화</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6581737">19일</a> - <a href="https://youtu.be/N8y2j2mW7aM">끼야호 (자운버거 , 포로리 더빙 버거)</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6593982">20일</a> - </a href="">헉 징버거의 상태가!!!!</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6593982">20일</a> - <a href="https://youtu.be/J1jVScm3swU">헉 징버거의 상태가!!!! (첫 페이셜 , 발로란트 , 민수데이 4회차 - 똥파이더맨)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6619559">22일</a> - </a href="">으우어아악</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6670783">26일</a> - </a href="">안녕하세요 강아지님들 저는 징버거에요</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6688106">27일</a> - </a href="">워료일</a></ul>
